crates/fsm/rustfsm_procmacro/tests/trybuild/forgot_name_fail.stderr
error: expected `name`
 --> $DIR/forgot_name_fail.rs:6:5
  |
6 |     One --(A)--> Two
  |     ^^^

error: The fsm definition should begin with `name MachineName; command CommandType; error ErrorType;` optionally followed by `shared_state SharedStateType;`
 --> $DIR/forgot_name_fail.rs:6:5
  |
6 |     One --(A)--> Two
  |     ^^^
